--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "all": "node index.js"
+    "all": "node index.js all",
+    "1": "node index.js 1",
+    "2": "node index.js 2",
+    "3": "node index.js 3",
+    "4": "node index.js 4",
+    "5": "node index.js 5",
+    "6": "node index.js 6",
+    "7": "node index.js 7",
+    "8": "node index.js 8",
+    "9": "node index.js 9"
   },
   "repository": {
     "type": "git",
