--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "7": "node index.js 7",
     "8": "node index.js 8",
     "9": "node index.js 9",
+    "10": "node index.js 10",
     "test": "jest",
     "all": "node index.js all"
   },
