--- a/package.json
+++ b/package.json
@@ -14,6 +14,21 @@
     "8": "node index.js 8",
     "9": "node index.js 9",
     "10": "node index.js 10",
+    "11": "node index.js 11",
+    "12": "node index.js 12",
+    "13": "node index.js 13",
+    "14": "node index.js 14",
+    "15": "node index.js 15",
+    "16": "node index.js 16",
+    "17": "node index.js 17",
+    "18": "node index.js 18",
+    "19": "node index.js 19",
+    "20": "node index.js 20",
+    "21": "node index.js 21",
+    "22": "node index.js 22",
+    "23": "node index.js 23",
+    "24": "node index.js 24",
+    "25": "node index.js 25",
     "test": "jest",
     "all": "node index.js all"
   },
