--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "homepage": "https://github.com/dlowder-salesforce/advent2018#readme",
   "dependencies": {
-    "jest": "^21.2.1"
+    "jest": "^21.2.1",
+    "js-collections": "^1.0.4"
   }
 }
